add: Added header and hero section

--- a/index.html
+++ b/index.html
@@ -9,11 +9,30 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&family=Montserrat:wght@300;400;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
     <!-- Main styles -->
     <link rel="stylesheet" type="text/css" href="./assets/style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <div class="header__wrapper wrapper">
+            <ul class="header__list">
+                <li class="header__list__item">Home</li>
+                <li class="header__list__item">About</li>
+                <li class="header__list__item">Contacts</li>
+            </ul>
+        </div>
+    </header>
+    <main>
+        <section class="hero">
+            <div class="wrapper">
+                <h1 class="hero__heading">This product will absolutely blow your mind!</h1>
+                <div class="hero__description">
+                    <p class="hero__description__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                    <button class="hero__description__button">buy it now</button>
+                </div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
