refactor: Corrected header navigation and style tree

--- a/index.html
+++ b/index.html
@@ -15,17 +15,17 @@
 </head>
 <body>
     <header class="header">
-        <div class="header__wrapper wrapper">
-            <ul class="header__list">
-                <li class="header__list__item">Home</li>
-                <li class="header__list__item">About</li>
-                <li class="header__list__item">Contacts</li>
+        <nav class="header__nav wrapper">
+            <ul class="header__nav__list">
+                <li class="header__nav__list-item">Home</li>
+                <li class="header__nav__list-item">About</li>
+                <li class="header__nav__list-item">Contacts</li>
             </ul>
-        </div>
+        </nav>
     </header>
     <main>
         <section class="hero">
-            <div class="wrapper">
+            <div class="hero__wrapper wrapper">
                 <h1 class="hero__heading">This product will absolutely blow your mind!</h1>
                 <div class="hero__description">
                     <p class="hero__description__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
