add: Added features section

--- a/index.html
+++ b/index.html
@@ -33,6 +33,24 @@
                 </div>
             </div>
         </section>
+        <section class="features">
+            <div class="features__wrapper wrapper">
+                <ul class="features__list">
+                    <li class="features__list-item">
+                        <h2 class="features__list-item__heading">Easy to use</h2>
+                        <p class="features__list-item__subheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </li>
+                    <li class="features__list-item">
+                        <h2 class="features__list-item__heading">Performant</h2>
+                        <p class="features__list-item__subheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </li>
+                    <li class="features__list-item">
+                        <h2 class="features__list-item__heading">Delivered</h2>
+                        <p class="features__list-item__subheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
 </body>
 </html>
