add: Added article section

--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <header class="header">
         <nav class="header__nav wrapper">
             <ul class="header__nav__list">
-                <li class="header__nav__list-item">Home</li>
-                <li class="header__nav__list-item">About</li>
-                <li class="header__nav__list-item">Contacts</li>
+                <li class="header__nav__list-item"><a href="#">Home</a></li>
+                <li class="header__nav__list-item"><a href="#">About</a></li>
+                <li class="header__nav__list-item"><a href="#">Contacts</a></li>
             </ul>
         </nav>
     </header>
@@ -49,6 +49,30 @@
                         <p class="features__list-item__subheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
                     </li>
                 </ul>
+            </div>
+        </section>
+        <section class="article">
+            <div class="article__wrapper wrapper">
+                <h2 class="article__heading">Boost your productivity</h2>
+                <p class="article__subheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                <img class="article__image" src="./assets/img/image-1.png" alt="image 1">
+                <p class="article__subheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                <article class="article__steps">
+                    <ul class="article__steps__list">
+                        <li class="article__steps__list-item">
+                            <h2 class="article__steps__list-item__heading">Try it for free</h2>
+                            <p class="article__steps__list-item__subheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </li>
+                        <li class="article__steps__list-item">
+                            <h2 class="article__steps__list-item__heading">1 year warranty</h2>
+                            <p class="article__steps__list-item__subheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </li>
+                        <li class="article__steps__list-item">
+                            <h2 class="article__steps__list-item__heading">20% off for two</h2>
+                            <p class="article__steps__list-item__subheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+                        </li>
+                    </ul>
+                </article>
             </div>
         </section>
     </main>
