add: Added footer

--- a/index.html
+++ b/index.html
@@ -76,5 +76,34 @@
             </div>
         </section>
     </main>
+    <footer class="footer">
+        <div class="footer__wrapper wrapper">
+            <h2 class="footer__heading">Contact us today</h2>
+            <ul class="footer__description">
+                <li class="footer__description__heading">About the company</li>
+                <li class="footer__description__subheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</li>
+            </ul>
+            <nav class="footer__nav">
+                <ul class="footer__nav__list">
+                    <li class="footer__nav__list-item--heading">Getting around</li>
+                    <li class="footer__nav__list-item">Home</li>
+                    <li class="footer__nav__list-item">About</li>
+                    <li class="footer__nav__list-item">Contacts</li>
+                </ul>
+                <ul class="footer__nav__list">
+                    <li class="footer__nav__list-item--heading">Other info</li>
+                    <li class="footer__nav__list-item">Lorem</li>
+                    <li class="footer__nav__list-item">Ipsum</li>
+                    <li class="footer__nav__list-item">Dolor</li>
+                </ul>
+                <ul class="footer__nav__list">
+                    <li class="footer__nav__list-item--heading">Legal info</li>
+                    <li class="footer__nav__list-item">Sit</li>
+                    <li class="footer__nav__list-item">Amet</li>
+                    <li class="footer__nav__list-item">Tempor</li>
+                </ul>
+            </nav>
+        </div>
+    </footer>
 </body>
 </html>
