--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
     <header class="header">
-        <nav class="header__nav wrapper">
+        <nav class="header__nav header__wrapper wrapper">
             <ul class="header__nav__list">
                 <li class="header__nav__list-item"><a href="#">Home</a></li>
                 <li class="header__nav__list-item"><a href="#">About</a></li>
@@ -53,10 +53,12 @@
         </section>
         <section class="article">
             <div class="article__wrapper wrapper">
-                <h2 class="article__heading">Boost your productivity</h2>
-                <p class="article__subheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
-                <img class="article__image" src="./assets/img/image-1.png" alt="image 1">
-                <p class="article__subheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                <div class="article__body">
+                    <h2 class="article__heading">Boost your productivity</h2>
+                    <p class="article__subheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                    <img class="article__image" src="./assets/img/image-1.png" alt="image 1">
+                    <p class="article__subheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
+                </div>
                 <article class="article__steps">
                     <ul class="article__steps__list">
                         <li class="article__steps__list-item">
@@ -79,30 +81,32 @@
     <footer class="footer">
         <div class="footer__wrapper wrapper">
             <h2 class="footer__heading">Contact us today</h2>
-            <ul class="footer__description">
-                <li class="footer__description__heading">About the company</li>
-                <li class="footer__description__subheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</li>
-            </ul>
-            <nav class="footer__nav">
-                <ul class="footer__nav__list">
-                    <li class="footer__nav__list-item--heading">Getting around</li>
-                    <li class="footer__nav__list-item">Home</li>
-                    <li class="footer__nav__list-item">About</li>
-                    <li class="footer__nav__list-item">Contacts</li>
+            <div class="footer__body">
+                <ul class="footer__description">
+                    <li class="footer__description__heading">About the company</li>
+                    <li class="footer__description__subheading">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</li>
                 </ul>
-                <ul class="footer__nav__list">
-                    <li class="footer__nav__list-item--heading">Other info</li>
-                    <li class="footer__nav__list-item">Lorem</li>
-                    <li class="footer__nav__list-item">Ipsum</li>
-                    <li class="footer__nav__list-item">Dolor</li>
-                </ul>
-                <ul class="footer__nav__list">
-                    <li class="footer__nav__list-item--heading">Legal info</li>
-                    <li class="footer__nav__list-item">Sit</li>
-                    <li class="footer__nav__list-item">Amet</li>
-                    <li class="footer__nav__list-item">Tempor</li>
-                </ul>
-            </nav>
+                <nav class="footer__nav">
+                    <ul class="footer__nav__list">
+                        <li class="footer__nav__list-item--heading">Getting around</li>
+                        <li class="footer__nav__list-item">Home</li>
+                        <li class="footer__nav__list-item">About</li>
+                        <li class="footer__nav__list-item">Contacts</li>
+                    </ul>
+                    <ul class="footer__nav__list">
+                        <li class="footer__nav__list-item--heading">Other info</li>
+                        <li class="footer__nav__list-item">Lorem</li>
+                        <li class="footer__nav__list-item">Ipsum</li>
+                        <li class="footer__nav__list-item">Dolor</li>
+                    </ul>
+                    <ul class="footer__nav__list">
+                        <li class="footer__nav__list-item--heading">Legal info</li>
+                        <li class="footer__nav__list-item">Sit</li>
+                        <li class="footer__nav__list-item">Amet</li>
+                        <li class="footer__nav__list-item">Tempor</li>
+                    </ul>
+                </nav>
+            </div>
         </div>
     </footer>
 </body>
