refactor: Fixed the links and text size in the footer

--- a/index.html
+++ b/index.html
@@ -89,21 +89,21 @@
                 <nav class="footer__nav">
                     <ul class="footer__nav__list">
                         <li class="footer__nav__list-item--heading">Getting around</li>
-                        <li class="footer__nav__list-item">Home</li>
-                        <li class="footer__nav__list-item">About</li>
-                        <li class="footer__nav__list-item">Contacts</li>
+                        <li class="footer__nav__list-item"><a href="#">Home</a></li>
+                        <li class="footer__nav__list-item"><a href="#">About</a></li>
+                        <li class="footer__nav__list-item"><a href="#">Contacts</a></li>
                     </ul>
                     <ul class="footer__nav__list">
                         <li class="footer__nav__list-item--heading">Other info</li>
-                        <li class="footer__nav__list-item">Lorem</li>
-                        <li class="footer__nav__list-item">Ipsum</li>
-                        <li class="footer__nav__list-item">Dolor</li>
+                        <li class="footer__nav__list-item"><a href="#">Lorem</a></li>
+                        <li class="footer__nav__list-item"><a href="#">Ipsum</a></li>
+                        <li class="footer__nav__list-item"><a href="#">Dolor</a></li>
                     </ul>
                     <ul class="footer__nav__list">
                         <li class="footer__nav__list-item--heading">Legal info</li>
-                        <li class="footer__nav__list-item">Sit</li>
-                        <li class="footer__nav__list-item">Amet</li>
-                        <li class="footer__nav__list-item">Tempor</li>
+                        <li class="footer__nav__list-item"><a href="#">Sit</a></li>
+                        <li class="footer__nav__list-item"><a href="#">Amet</a></li>
+                        <li class="footer__nav__list-item"><a href="#">Tempor</a></li>
                     </ul>
                 </nav>
             </div>
